出陣(green): チームプロジェクト集約API実装＋マイページ2セクション化（ArchUnit越境はService経由で是正）
- MembershipService.getActiveTeamIdsByUser() 新設（D-3 ArchUnit準拠）
- TeamRepository.findNameMapByIdIn() @Query defaultメソッドで追加
- TeamService.getNamesByIds() 空実装を本実装に
- ProjectService.listTeamProjectsForUser() 本実装（MembershipRepository直注入をMembershipService経由に変更）
- ProjectServiceTest AC-2〜AC-8: MembershipRepositoryモック→MembershipServiceモックに変更し全PASSED
- MyTeamProjectControllerTest 2件 PASSED
- FE: TeamProjectResponse型追加、listMyTeamProjects() composable追加
- my/projects/index.vue: 個人／チームの2セクション構造に変更
- i18n: team_projects_section・no_team_projects を全6言語に追加

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>